cabal-version:       2.0
name:                dropbox-api
version:             0.4
description:         Functions and data types to use Dropbox API.
                     Official dropbox docs <https://www.dropbox.com/developers/documentation/http/documentation>.
                     .
                     See the project readme for quickstart notes
                     <https://github.com/dantiel/dropbox-api-haskell#dropbox-api-haskell->
synopsis:            Write bots for Dropbox in Haskell
homepage:            https://github.com/dantiel/dropbox-api-haskell.git
bug-reports:         https://github.com/dantiel/dropbox-api-haskell/issues
license:             MIT
license-file:        LICENSE
author:              dantiel
maintainer:          daro@darographix.com
copyright:           2020 dantiel
category:            Network
build-type:          Simple
extra-doc-files:     README.md
                   , changelog.md
source-repository head
  type:                git
  location:            https://github.com/dantiel/dropbox-api-haskell.git


library
  ghc-options:         -Wall
                       -fno-warn-type-defaults
  hs-source-dirs:      src
  default-language:    Haskell2010
  -- extensions:
  exposed-modules:     Dropbox
                     , Dropbox.Routes
  build-depends:
                       base >= 4 && <5
                     , aeson
                     , async
                     , http-types
                     , http-client
                     , bytestring
                     , base64-bytestring
                     , filepath
                     , lens
                     , text
                     , SHA
                     , mtl
                     , wreq
                     , wai
                     , wai-extra
                     , superrecord
                     , warp
